Bug 140683 - crash on startup after an after ctrl+alt+backspace
Summary: crash on startup after an after ctrl+alt+backspace
Status: RESOLVED FIXED
Alias: None
Product: kicker
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: openSUSE Linux
: NOR crash
Target Milestone: ---
Assignee: Aaron J. Seigo
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2007-01-26 21:42 UTC by Daniel Dumitrache
Modified: 2008-07-21 16:22 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
kickerrc (5.33 KB, text/plain)
2007-01-27 00:49 UTC, Daniel Dumitrache
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Daniel Dumitrache 2007-01-26 21:42:44 UTC
Version:            (using KDE KDE 3.5.5)
Installed from:    SuSE RPMs

System configuration startup check disabled.

Using host libthread_db library "/lib/libthread_db.so.1".
[Thread debugging using libthread_db enabled]
[New Thread -1231431984 (LWP 5243)]
[KCrash handler]
#9  0xb7f36410 in ?? ()
#10 0xbff681b8 in ?? ()
#11 0x00000006 in ?? ()
#12 0x0000147b in ?? ()
#13 0xb6f48060 in raise () from /lib/libc.so.6
#14 0xb6f49801 in abort () from /lib/libc.so.6
#15 0xb6f417bb in __assert_fail () from /lib/libc.so.6
#16 0xb69ea7b4 in xcb_xlib_lock () from /usr/lib/libxcb-xlib.so.0
#17 0xb717143c in _XCBLockDisplay () from /usr/lib/libX11.so.6
#18 0xb7149875 in XDestroyWindow () from /usr/lib/libX11.so.6
#19 0xb74663a4 in qt_XDestroyWindow () from /usr/lib/qt3/lib/libqt-mt.so.3
#20 0xb7460984 in QWidget::destroy () from /usr/lib/qt3/lib/libqt-mt.so.3
#21 0xb752bceb in QWidget::~QWidget () from /usr/lib/qt3/lib/libqt-mt.so.3
#22 0xb752c13d in QWidget::~QWidget () from /usr/lib/qt3/lib/libqt-mt.so.3
#23 0xb7a4982e in KXMessages::~KXMessages () from /opt/kde3/lib/libkdecore.so.4
#24 0xb7a98bc1 in KStartupInfo::~KStartupInfo ()
   from /opt/kde3/lib/libkdecore.so.4
#25 0xb74f492c in QObject::~QObject () from /usr/lib/qt3/lib/libqt-mt.so.3
#26 0xb601a555 in TaskManager::~TaskManager ()
   from /opt/kde3/lib/libtaskmanager.so.1
#27 0xb6018802 in __tcf_6 () from /opt/kde3/lib/libtaskmanager.so.1
#28 0xb6f4abcd in exit () from /lib/libc.so.6
#29 0xb74249f2 in qt_xget_readonly_gc () from /usr/lib/qt3/lib/libqt-mt.so.3
#30 0xb7a3781d in KApplication::xioErrhandler ()
   from /opt/kde3/lib/libkdecore.so.4
#31 0xb7a37869 in kde_xio_errhandler () from /opt/kde3/lib/libkdecore.so.4
#32 0xb716a96d in _XIOError () from /usr/lib/libX11.so.6
#33 0xb7171131 in _XPutXCBBuffer () from /usr/lib/libX11.so.6
#34 0xb717134e in _XCBUnlockDisplay () from /usr/lib/libX11.so.6
#35 0xb715f1c3 in XPutImage () from /usr/lib/libX11.so.6
#36 0xb744a55e in QPixmap::convertFromImage ()
   from /usr/lib/qt3/lib/libqt-mt.so.3
#37 0xb75051c2 in QPixmap::load () from /usr/lib/qt3/lib/libqt-mt.so.3
#38 0xb7505226 in QPixmap::load () from /usr/lib/qt3/lib/libqt-mt.so.3
#39 0xb66ebbbb in KMenuItem::init () from /opt/kde3/lib/libkdeinit_kicker.so
#40 0xb66ecacc in ItemView::insertRecentlyItem ()
   from /opt/kde3/lib/libkdeinit_kicker.so
#41 0xb670740d in KMenu::createRecentMenuItems ()
   from /opt/kde3/lib/libkdeinit_kicker.so
#42 0xb67074c3 in KMenu::updateRecent ()
   from /opt/kde3/lib/libkdeinit_kicker.so
#43 0xb6723ff1 in KMenu::stackWidgetRaised ()
   from /opt/kde3/lib/libkdeinit_kicker.so
#44 0xb6724170 in KMenu::qt_invoke () from /opt/kde3/lib/libkdeinit_kicker.so
#45 0xb74f23cd in QObject::activate_signal ()
   from /usr/lib/qt3/lib/libqt-mt.so.3
#46 0xb784d9e1 in QWidgetStack::aboutToShow ()
   from /usr/lib/qt3/lib/libqt-mt.so.3
#47 0xb763212d in QWidgetStack::raiseWidget ()
   from /usr/lib/qt3/lib/libqt-mt.so.3
#48 0xb66e8eef in KMenu::eventFilter () from /opt/kde3/lib/libkdeinit_kicker.so
#49 0xb74f1ccc in QObject::activate_filters ()
   from /usr/lib/qt3/lib/libqt-mt.so.3
#50 0xb74f1d3b in QObject::event () from /usr/lib/qt3/lib/libqt-mt.so.3
#51 0xb752ae3c in QWidget::event () from /usr/lib/qt3/lib/libqt-mt.so.3
#52 0xb76184f2 in QTabBar::event () from /usr/lib/qt3/lib/libqt-mt.so.3
#53 0xb7493647 in QApplication::internalNotify ()
   from /usr/lib/qt3/lib/libqt-mt.so.3
#54 0xb7494641 in QApplication::notify () from /usr/lib/qt3/lib/libqt-mt.so.3
#55 0xb7b1c1f2 in KApplication::notify () from /opt/kde3/lib/libkdecore.so.4
#56 0xb7433457 in QETWidget::translateMouseEvent ()
   from /usr/lib/qt3/lib/libqt-mt.so.3
#57 0xb7432b42 in QApplication::x11ProcessEvent ()
   from /usr/lib/qt3/lib/libqt-mt.so.3
#58 0xb744291a in QEventLoop::processEvents ()
   from /usr/lib/qt3/lib/libqt-mt.so.3
#59 0xb74aa0e0 in QEventLoop::enterLoop () from /usr/lib/qt3/lib/libqt-mt.so.3
#60 0xb74a9f76 in QEventLoop::exec () from /usr/lib/qt3/lib/libqt-mt.so.3
#61 0xb749300f in QApplication::exec () from /usr/lib/qt3/lib/libqt-mt.so.3
#62 0xb66ae8a2 in kdemain () from /opt/kde3/lib/libkdeinit_kicker.so
#63 0xb726d524 in kdeinitmain () from /opt/kde3/lib/kde3/kicker.so
#64 0x0804e33f in launch ()
#65 0x0804ebca in handle_launcher_request ()
#66 0x0804ef4f in handle_requests ()
#67 0x0805014c in main ()
Comment 1 Philip Rodrigues 2007-01-27 00:45:08 UTC
Please attach your ~/.kde/share/config/kickerrc
Comment 2 Daniel Dumitrache 2007-01-27 00:49:20 UTC
Created attachment 19432 [details]
kickerrc

here's the kickerrc
Comment 3 Lubos Lunak 2008-07-21 16:22:48 UTC
SVN commit 835987 by lunakl:

Remove emitting of aboutToQuit() from KApplication::xioErrhandler() - the application
is not about to quit, it is about to fall flat on its face. There is really not that
much to do once KDE apps lose their connection to the X server. How that can happen
while the X server still continues to run is a different question and I don't know
the answer. It is quite possible it is caused by careless usage of one X connection
from several threads concurrently without proper locking.

CCBUG: 166685
CCBUG: 166432
CCBUG: 166401
CCBUG: 166179
CCBUG: 165451
CCBUG: 165307
CCBUG: 165059
CCBUG: 164740
CCBUG: 164665
CCBUG: 163751
CCBUG: 163355
CCBUG: 161787
CCBUG: 160692
CCBUG: 160458
CCBUG: 158194
CCBUG: 158088
CCBUG: 157607
CCBUG: 154011
CCBUG: 151293
CCBUG: 146891
CCBUG: 146700
CCBUG: 146562
CCBUG: 144383
CCBUG: 143375
CCBUG: 141871
BUG: 140683
CCBUG: 139162
CCBUG: 134708
CCBUG: 133332
CCBUG: 128588
CCBUG: 112960



 M  +0 -1      kapplication.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=835987