Remove emitting of aboutToQuit() from KApplication::xioErrhandler() - the application is not about to quit, it is about to fall flat on its face. There is really not that much to do once KDE apps lose their connection to the X server. How that can happen while the X server still continues to run is a different question and I don't know the answer. It is quite possible it is caused by careless usage of one X connection from several threads concurrently without proper locking.

CCBUG: 166685
CCBUG: 166432
CCBUG: 166401
CCBUG: 166179
CCBUG: 165451
CCBUG: 165307
CCBUG: 165059
CCBUG: 164740
CCBUG: 164665
CCBUG: 163751
CCBUG: 163355
CCBUG: 161787
CCBUG: 160692
CCBUG: 160458
CCBUG: 158194
CCBUG: 158088
CCBUG: 157607
CCBUG: 154011
CCBUG: 151293
CCBUG: 146891
CCBUG: 146700
CCBUG: 146562
CCBUG: 144383
CCBUG: 143375
CCBUG: 141871
BUG: 140683
CCBUG: 139162
CCBUG: 134708
CCBUG: 133332
CCBUG: 128588
CCBUG: 112960


svn path=/trunk/KDE/kdelibs/; revision=835987